[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contx"
version = "1.0.0"
description = "High-performance code analysis and context generation using Tree-sitter"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tree-sitter",
    "tree-sitter-language-pack",
]

[project.scripts]
contx = "contx.main:main"
